--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <input id="btn" onclick="CopyToClipboard('text')" type="button" value="Copy" />
 
 
-<script>
+<script type="text/javascript" src="particles.js"></script>
 function CopyToClipboard(element) {
 
                                 var doc = document
